--- a/contact.html
+++ b/contact.html
@@ -1,46 +1,117 @@
- <!-- Main Content for Contact Us Page -->
+<!doctype html>
+<html class="no-js" lang="en">
+    <head>
+        <title>Contact Us - NS SYSTEMES IT SOLUTIONS</title>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="author" content="NS SYSTEMES IT SOLUTIONS">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+        <meta name="description" content="Get in touch with NS SYSTEMES IT SOLUTIONS. We're here to help with your IT needs.">
+
+        <link rel="shortcut icon" href="img/main-log.svg">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+        <link rel="stylesheet" href="css/style.css">
+        <!-- Add specific styles for contact page if necessary -->
+        <style>
+            .contact-content-area {
+                padding: 4rem 0;
+            }
+            .contact-content-area.page-content-after-fixed-header {
+                 padding-top: calc(var(--navbar-height-scrolled) + 4rem); /* Navbar height + desired top padding */
+            }
+            .contact-content-area .container {
+                max-width: 700px; /* Adjusted max-width as there's only one column now */
+                margin: 0 auto; /* Center the container */
+            }
+            .contact-details-section {
+                margin-bottom: 3rem;
+            }
+            .contact-details-section h2 {
+                font-size: 2.2rem; /* Slightly larger title for details */
+                color: var(--primary-color);
+                margin-bottom: 2rem; /* More space below title */
+                padding-bottom: 0.75rem;
+                border-bottom: 2px solid var(--light-accent-color);
+                text-align: center; /* Center the main title */
+            }
+             .contact-details-section h3 { /* For sub-headings like Office Hours */
+                font-size: 1.5rem;
+                color: var(--text-dark);
+                margin-top: 2.5rem;
+                margin-bottom: 1rem;
+            }
+            .contact-details-section p {
+                font-size: 1.1rem; /* Slightly larger text */
+                line-height: 1.9;
+                margin-bottom: 1.2rem; /* More spacing between detail lines */
+                color: var(--text-muted);
+                display: flex; /* For aligning icon and text nicely */
+                align-items: center; /* Vertically align icon with text */
+            }
+            .contact-details-section p i {
+                margin-right: 1rem; /* More space after icon */
+                color: var(--primary-color);
+                width: 22px;
+                font-size: 1.2rem; /* Slightly larger icons */
+                text-align: center;
+            }
+            .contact-details-section p a {
+                color: var(--primary-color);
+                text-decoration: none;
+                font-weight: 500;
+            }
+            .contact-details-section p a:hover {
+                text-decoration: underline;
+            }
+            .map-container {
+                margin-top: 3rem;
+                height: 400px;
+                background: var(--light-accent-color);
+                border-radius: var(--border-radius-md);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: var(--text-muted);
+                border: 1px solid #ddd;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="scroll-progress"></div>
+
+        <div id="page-container">
+            <!-- Header Module -->
+            <div data-include="modules/header.html"></div>
+
+            <!-- Main Content for Contact Us Page -->
             <main class="contact-content-area page-content-after-fixed-header">
                 <div class="container">
-                    <div class="row" style="display: flex; flex-wrap: wrap; gap: 2rem;">
-                        <div class="contact-form-section" style="flex: 2; min-width: 300px;">
-                            <!-- REMOVED THIS H2: <h2>Send Us a Message</h2> -->
-                            <form id="contactForm" action="YOUR_FORM_HANDLER_URL" method="POST">
-                                <div class="form-group">
-                                    <label for="name">Full Name</label>
-                                    <input type="text" id="name" name="name" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="email">Email Address</label>
-                                    <input type="email" id="email" name="email" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="phone">Phone Number (Optional)</label>
-                                    <input type="tel" id="phone" name="phone">
-                                </div>
-                                <div class="form-group">
-                                    <label for="subject">Subject</label>
-                                    <input type="text" id="subject" name="subject" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="message">Your Message</label>
-                                    <textarea id="message" name="message" rows="5" required></textarea>
-                                </div>
-                                <button type="submit" class="cta-button">Send Message</button>
-                            </form>
-                        </div>
+                    <div class="contact-details-section">
+                        <h2>Our Contact Details</h2>
+                        <p><i class="fas fa-map-marker-alt"></i> Hyderabad, INDIA</p>
+                        <p><i class="fas fa-phone-alt"></i> <a href="tel:+918977540698">+91 89775 40698</a></p>
+                        <p><i class="fas fa-envelope"></i> <a href="mailto:info@nsystemes.com">info@nsystemes.com</a></p>
+                        <p><i class="fas fa-globe"></i> <a href="https://www.nsystemes.com" target="_blank">www.nsystemes.com</a></p>
 
-                        <div class="contact-details-section" style="flex: 1; min-width: 280px;">
-                            <h2>Our Contact Details</h2>
-                            <p><i class="fas fa-map-marker-alt"></i> Hyderabad, INDIA</p>
-                            <p><i class="fas fa-phone-alt"></i> <a href="tel:+918977540698">+91 89775 40698</a></p>
-                            <p><i class="fas fa-envelope"></i> <a href="mailto:info@nsystemes.com">info@nsystemes.com</a></p>
-                            <p><i class="fas fa-globe"></i> <a href="https://www.nsystemes.com" target="_blank">www.nsystemes.com</a></p>
+                        <h3>Office Hours</h3>
+                        <p><i class="far fa-clock"></i> Monday - Friday: 9:00 AM - 6:00 PM</p>
+                        <p><i class="far fa-clock"></i> Saturday: 10:00 AM - 2:00 PM</p>
+                        <p><i class="fas fa-door-closed"></i> Sunday: Closed</p>
 
-                            <h2>Office Hours</h2>
-                            <p>Monday - Friday: 9:00 AM - 6:00 PM</p>
-                            <p>Saturday: 10:00 AM - 2:00 PM</p>
-                            <p>Sunday: Closed</p>
-                        </div>
+                        <!-- Optional: Map Placeholder -->
+                        <!-- <div class="map-container">
+                            <p>Map will be embedded here. (e.g., Google Maps)</p>
+                            <iframe src="YOUR_GOOGLE_MAPS_EMBED_URL" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        </div> -->
                     </div>
                 </div>
             </main>
+
+            <!-- Footer Module -->
+            <div data-include="modules/footer.html"></div>
+        </div>
+
+        <script src="js/script.js"></script>
+   </body>
+</html>
