--- a/modules/solutions-offered.html
+++ b/modules/solutions-offered.html
@@ -6,7 +6,7 @@
         </p>
         <div class="solutions-grid">
             <div class="solution-card animate-on-scroll">
-                <img src="img/solution-cloud.png" alt="Cloud Services Illustration">
+                <img src="img/solution-cloud.jpg" alt="Cloud Services Illustration">
                 <div class="solution-card-content">
                     <h3>Cloud Services</h3>
                     <p>Scalable and secure cloud solutions tailored to your business needs.</p>
