--- a/modules/hero.html
+++ b/modules/hero.html
@@ -1,4 +1,13 @@
 <section class="hero">
+    <div class="hero-video-wrapper">
+        <video playsinline autoplay muted loop poster="img/banner4.jpg" id="heroVideo">
+            <source src="img/banner4.mp4" type="video/mp4">
+            <!-- Optional: Add other video formats for broader compatibility -->
+            <!-- <source src="videos/banner4.webm" type="video/webm"> -->
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    <div class="hero-overlay"></div> <!-- Overlay div -->
     <div class="hero-content">
         <h1>Empowering Your Organization with Tailored IT Solutions</h1>
         <p>We specialize in filling the gap between technology, bringing your organization to speed up to thrive in a digital world.</p>
