--- a/modules/header.html
+++ b/modules/header.html
@@ -1,7 +1,8 @@
 <nav class="navbar">
     <div class="nav-container">
-        <a href="index.html" class="logo">
-            NS SYSTEMES IT SOLUTIONS
+        <a href="index.html" class="logo-link"> <!-- Changed class for clarity -->
+            <img src="img/ns-logo-shield.png" alt="NS SYSTEMES IT SOLUTIONS Logo" class="navbar-logo-image">
+            <span class="logo-text- naast-shield">NS SYSTEMES IT SOLUTIONS</span> <!-- Optional: keep text if logo is small or for SEO/accessibility -->
         </a>
         <ul class="nav-menu">
             <li><a href="index.html" class="nav-link">Home</a></li>
@@ -11,7 +12,6 @@
             <li><a href="careers.html" class="nav-link">Careers</a></li>
             <li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
-        <!-- <a href="contact.html" class="nav-cta-button">Get Started</a>  REMOVED THIS LINE -->
         <div class="hamburger">
             <span></span>
             <span></span>
