--- a/modules/header.html
+++ b/modules/header.html
@@ -2,7 +2,7 @@
     <div class="nav-container">
         <a href="index.html" class="logo-link"> <!-- Changed class for clarity -->
             <img src="img/ns-logo-shield.png" alt="NS SYSTEMES IT SOLUTIONS Logo" class="navbar-logo-image">
-            <span class="logo-text- naast-shield">NS SYSTEMES IT SOLUTIONS</span> <!-- Optional: keep text if logo is small or for SEO/accessibility -->
+            <!--<span class="logo-text- naast-shield">NS SYSTEMES IT SOLUTIONS</span> --> <!-- Optional: keep text if logo is small or for SEO/accessibility -->
         </a>
         <ul class="nav-menu">
             <li><a href="index.html" class="nav-link">Home</a></li>
